--- a/app/public/wp-content/themes/ocebo26/assets/css/layout.css
+++ b/app/public/wp-content/themes/ocebo26/assets/css/layout.css
@@ -35,11 +35,6 @@ body {
   overflow: hidden;
   filter: blur(3px);
   opacity: 0;
-  transition: opacity 1200ms ease-out;
-}
-
-#lace-wrap.is-active {
-  opacity: 1;
 }
 
 #lace-svg {
